[workspace]
resolver = "2"

members = [
  "crates/*"
]

[workspace.dependencies]
alloy-primitives = { version = "1.0.1", features = ["serde"]}
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0", features = ["extra-traits", "fold", "parsing", "visit", "full"] }
derive_more = { version = "2.0.1", features = ["from", "full"] }
glob = "0.3.2"
prettyplease = "0.2.36"
