[workspace]
resolver = "2"

members = [
  "crates/*"
]

[workspace.dependencies]
alloy-primitives = { version = "1.0.1", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "fold", "visit", "clone-impls", "printing"] }
derive_more = { version = "2.0", default-features = false, features = ["from"] }
glob = { version = "0.3", default-features = false }
prettyplease = { version = "0.2", default-features = false }
