[package]
name = "alloy-checked-math-example"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more.workspace = true
alloy-primitives.workspace = true

alloy-checked-math = { path = "../alloy-checked-math", default-features = false }

[dev-dependencies]
alloy-checked-math = { path = "../alloy-checked-math", default-features = false, features = ["lint"] }
